--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,6 +2,4 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/ithub/public_html/digital012.org/git-test/
-    - /bin/rm -Rf $DEPLOYPATH
-  - /bin/mkdir $DEPLOYPATH
-  - /bin/cp -R src/ $DEPLOYPATH
+    - /bin/cp -r * $DEPLOYPATH
